[package]
name = "egui_wgpu_backend"
version = "0.16.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"
description = "Backend code to use egui with wgpu."
homepage = "https://github.com/hasenbanck/egui_wgpu_backend"
repository = "https://github.com/hasenbanck/egui_wgpu_backend"
license = "MIT OR Apache-2.0"
readme = "README.md"
resolver = "2"

[features]
default = []
web = []

[dependencies]
egui = "0.16"
wgpu = "0.12"
bytemuck = "1.7"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "b370b990e543bd8c74c895a0f856604368806e5c" }
